<?xml version="1.0"?>
<package format="2">
  <name>ego_planner</name>
  <version>0.1.0</version>
  <description>Fly control function library for drones</description>
  <maintainer email="hus-king@hust.edu.cn">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 统一使用 depend 标签，包含了 build 和 exec -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>livox_ros_driver</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>